# ASIOServerGenerator

./: .gitignore  README.md  gen.sh
base/: .gitignore  CMakeLists.txt
base/__PROJNAME__/: CMakeLists.txt  __PROJNAME__.cpp
base/include/__PROJNAME__/: Common.h  Server.h
base/include/__PROJNAME__/Detail/: Connection.h  ConnectionManager.h
base/src/: CMakeLists.txt  Server.cpp
base/src/Detail/: Connection.cpp  ConnectionManager.cpp
